Cambios para buscador en youtube

--- a/serenity-test/serenity.properties
+++ b/serenity-test/serenity.properties
@@ -3,6 +3,8 @@
 serenity.project.name = Dogpile Example
 serenity.test.root=dogpile
 # Driver Configuration
-# Webdriver.driver = chrome
-# driver.mac.webdriver.firefox.driver = src/test/resources/webdriver/geckodriver
+Webdriver.driver = chrome
+driver.mac.webdriver.chrome.driver = src/test/resources/webDriver/chromedriver
+serenity.browser.maximized = true
+
 
