--- a/serenity-test/src/test/resources/serenity.conf
+++ b/serenity-test/src/test/resources/serenity.conf
@@ -1,5 +1,5 @@
 serenity {
-  take.screenshots = FOR_FAILURES
+  take.screenshots =FOR_EACH_ACTION
   test.root = "starter.acceptancetests"
   logging = VERBOSE
 }
@@ -17,6 +17,6 @@ webdriver {
   }
 }
 
-webdriver.driver=chrome
-webdriver.chrome.driver=path/to/chromedriver
+webdriver.driver=firefox
+webdriver.firefox.driver=src/test/resources/webDriver/geckodriver
 serenity.project.name=Dogpile Test
